modified:   .gitignore modified:   decoder.py modified:   encoder.py modified:   recorder.py new file:   tmp/speech_recognizer.py modified:   tmp/tmp.py modified:   tvquiz.py

--- a/.gitignore
+++ b/.gitignore
@@ -60,5 +60,13 @@ docs/_build/
 # PyBuilder
 target/
 
+# Vim
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+*.un~
+Session.vim
+.netrwhist
+*~
+
 # Virtual Environment
 venv/
